<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mcc-group-27-android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone Number</string>
    <string name="create_button">Create</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>

</resources>
